--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ase_extension"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -20,3 +20,4 @@ pyo3 = { version = "0.18.0", features = ["extension-module"] }
 ordered-float = "3.4.0"
 rand = "0.8.5"
 rayon = "1.6.1"
+nalgebra = "0.32.2"
