extension module is now private

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
 
 [tool.maturin]
 python-source = "python_src"
-
+module-name = "ase_extension._ext"
 [tool.isort]
 profile = "black"
 
