--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,8 @@ name = "ase_extension"
 requires-python = ">=3.7"
 dependencies = [
     "ase",
-    "numpy"
+    "numpy",
+    "numba",
 ]
 
 [tool.maturin]
