--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -82,9 +82,7 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: macos-12
-            target: x86_64
-          - runner: macos-14
+          - runner: macos-latest
             target: aarch64
     steps:
       - uses: actions/checkout@v4
